--- a/src/main/webapp/WEB-INF/pages/all.html
+++ b/src/main/webapp/WEB-INF/pages/all.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>List of all users</title>
 </head>
 <body>
 
